syntax = "proto3";
package matcha.view;
import "github.com/gomatcha/matcha/proto/image.proto";

option go_package = "view";
option objc_class_prefix = "MatchaViewPB";
option java_package = "com.github.gomatcha.matcha.proto.view";
option java_outer_classname = "PbImageView";

enum ImageResizeMode {
    FIT = 0;
    FILL = 1;
    STRETCH = 2;
    CENTER = 3;
}

message ImageView {
    matcha.ImageOrResource image = 1;
    ImageResizeMode resizeMode = 2;
    matcha.Color tint = 3;
    double scale = 5;
}
